tests/regression/500_INTEGRATION_TESTING/510_NEGATIVE_TESTS/510_068_return_in_flow/expected.txt
error[KORU010]: continuation without branch handler — '|>' at line start is not allowed; '|>' is inline glue only
  --> tests/regression/500_INTEGRATION_TESTING/510_NEGATIVE_TESTS/510_068_return_in_flow/input.kz:7:0
    |
  7 | |> return
    | ^

error[PARSE003]: Flows terminate with '_', not 'return'
  --> tests/regression/500_INTEGRATION_TESTING/510_NEGATIVE_TESTS/510_068_return_in_flow/input.kz:7:1
    |
  7 | |> return
    | ^

